public/stylesheets/screen.css
/* ... */
div#conversation section#drawPanel div#frames a.frame:first-child {
	border-top-right-radius: 4px;
}
div#conversation section#drawPanel div#frames a.frame:last-of-type {
	border-bottom-right-radius: 4px;
	border-bottom: 1px solid #bdbdbd;
}
div#conversation section#drawPanel div#frames a.frame.selected {
	background-color: white;
	border-left-color: rgba(255, 255, 255, 0);
	font-weight: bold;
}
div#conversation section#drawPanel div#frames button#addFrame,
div#conversation section#drawPanel div#frames button#removeFrame {
	margin: 3px 9px 0 13px;
}

div#conversation section#drawPanel div#commands {
	position: absolute;
	bottom: 0;
	left: 0; right: 0;
	z-index: 3;

	width: 100%;
	display: block;
	box-sizing: border-box;
	background-color: #efefed;
	border-top: 1px solid #bbb;
	padding: 10px;

	box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
}

div#avatarContainer div#avatarControls {
	margin-top: 10px;
	text-align: center;
}

div#conversation section#drawPanel div#tools,
div#avatarContainer div#tools {
	position: relative;
	z-index: 2;

	box-sizing: border-box;
	display: inline-block;
	width: 100%;

	background-color: #f3f3f1;
	border: 1px solid #bdbdbd;
	border-radius: 3px;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);

	max-width: 480px;
}
div#conversation section#drawPanel div#tools {
	padding: 15px 15px 10px 15px;
	z-index: 50;

	border-top: none;
	border-top-left-radius: 0; border-top-right-radius: 0;
}
div#avatarContainer div#tools {
	padding: 15px;
}
div#conversation section#drawPanel div#tools h3,
div#avatarContainer div#tools h3 {
	color: #666;
	font-family: "Open Sans", sans-serif;
	font-size: 0.95rem;
	font-weight: normal;
	margin: 0;
}
div#conversation section#drawPanel div#tools ul,
div#avatarContainer div#tools ul {
	list-style: none;
	padding: 0;
	width: 100%;
	margin: 0 auto 10px auto;
	font-size: 0;
}
div#conversation section#drawPanel div#tools ul li,
div#avatarContainer div#tools ul li {
	position: relative;
	box-sizing: border-box;
	width: 10.5%;
	margin-right: 2%;
	padding: 4px;
	height: 36px;
	display: inline-block;
	border: 1px solid #bdbdbd;
	border-radius: 3px;
	background-color: #f9f9f5;
}
div#conversation section#drawPanel div#tools ul li:last-child,
div#avatarContainer div#tools ul li:last-child {
	margin-right: 0;
}
div#conversation section#drawPanel div#tools ul li.active,
div#avatarContainer div#tools ul li.active {
	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.4);
	border-color: orange;
}
div#conversation section#drawPanel div#tools ul li:active,
div#avatarContainer div#tools ul li:active {
	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.4);
}
div#conversation section#drawPanel div#tools ul li.big,
div#avatarContainer div#tools ul li.big {
	margin: 0 1%;
	vertical-align: top;
}
div#conversation section#drawPanel div#tools ul li.big { width: 14.65%; }
div#avatarContainer div#tools ul li.big { width: 23%; text-align: center; }
div#conversation section#drawPanel div#tools ul li#hotkey {
	font-size: 24px;
	line-height: 37px;
	color: black;
}
div#conversation section#drawPanel div#tools ul li.big img,
div#avatarContainer div#tools ul li.big img {
	max-width: 100%;
	max-height: 26px;
}
div#conversation section#drawPanel div#tools ul li i,
div#avatarContainer div#tools ul li i {
	margin-top: 4px;
	vertical-align: top;
	font-size: 18px;
	width: 18px;
	color: #666;
}
div#conversation section#drawPanel div#tools ul li#white,
div#avatarContainer div#tools ul li#white { background-color: #FFF; }
div#conversation section#drawPanel div#tools ul li#grey,
div#avatarContainer div#tools ul li#grey { background-color: #808080; }
div#conversation section#drawPanel div#tools ul li#black,
div#avatarContainer div#tools ul li#black { background-color: #000; }
div#conversation section#drawPanel div#tools ul li#red,
div#avatarContainer div#tools ul li#red { background-color: #F00; }
div#conversation section#drawPanel div#tools ul li#hotPink,
div#avatarContainer div#tools ul li#hotPink { background-color: #FF69B4; }
div#conversation section#drawPanel div#tools ul li#yellow,
div#avatarContainer div#tools ul li#yellow { background-color: #FFFF00; }
div#conversation section#drawPanel div#tools ul li#blue,
div#avatarContainer div#tools ul li#blue { background-color: #00F; }
div#conversation section#drawPanel div#tools ul li#green,
div#avatarContainer div#tools ul li#green { background-color: #0F0; }

div#conversation section#drawPanel div#tools div#brushSize input[type="range"],
div#avatarContainer div#tools div#brushSize input[type="range"] {
	width: 100%;
}

div#profile {
	text-align: center;
}
div#profile img#avatar {
	display: block;
	margin: auto;
	box-sizing: border-box;
	max-height: 384px; max-width: 384px;

	width: 100%;

	background-color: white;
	border: 1px solid #bdbdbd;
	border-radius: 100%;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}
div#profile h1 {
	border: none;
	font-size: 3rem;
	font-weight: 300;
	margin-top: 20px;
	margin-bottom: 10px;
}

div#modalBackground {
	z-index: 101;
	position: fixed;
	top: 0; bottom: 0;
	left: 0; right: 0;
	background-color: rgba(0, 0, 0, 0.3);
}
div#modal {
	box-sizing: border-box;
	z-index: 102;
	position: fixed;
	width: 50%;
	margin-left: 25%;
	/*margin-top: 40px;*/
	top: 40px; bottom: 50px;
	padding: 55px 20px 20px 20px;

	max-height: 500px;
	overflow-y: auto;

	border: 1px solid #666;
	border-radius: 4px;
	background-color: #f9f9f5;

	box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
}
div#modal h1 {
	position: fixed;
	top: 40px;
	left: calc(25% + 1px);
	z-index: 103;
	width: calc(50% - 2px);

	box-sizing: border-box;
	margin-top: 0;
	padding: 9px 20px 5px 20px;
	overflow: hidden;

	border-top: 1px solid #666;
	border-bottom: 1px solid #ccc;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	background-color: #f9f9f5;

	font-family: "Open Sans", sans-serif;
	font-weight: 300;
	color: #666;
	font-size: 1.3rem;
}
div#modal h1 span {
	float: left;
}
div#modal h1 div.controls {
	float: right;
	margin-top: -1px;
}
/* ... */

